--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,29 +1,22 @@
-pipeline {
-    agent {
-        docker {
-            image 'maven:3.9.0'
-            args '-v /root/.m2:/root/.m2'
+pipeline{
+
+    agent none 
+    stages{
+        stage('build'){
+           steps{
+              echo 'This is build stage'
+           }
         }
-    }
-    stages {
-        stage('Build') {
+
+        stage('test') {
             steps {
-                sh 'mvn -B -DskipTests clean package'
+                echo 'this is test stage'
             }
         }
-        stage('Test') {
-            steps {
-                sh 'mvn test'
-            }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
-            }
-        }
-        stage('Deliver') {
-            steps {
-                sh './jenkins/scripts/deliver.sh'
+
+        stage('deploy') {
+            steps{
+                echo 'This is deploy stage'
             }
         }
     }
