--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,23 +1,23 @@
 pipeline{
 
-    agent none 
+    agent any 
+
+    tools {
+      maven 'my-maven'
+     }
+
     stages{
         stage('build'){
            steps{
-              echo 'This is build stage'
+              sh 'mvn clean package'
+           }
+
+           post{
+            success{
+                archiveArtifacts artifacts : '**/target/*.war'
+            }
            }
         }
-
-        stage('test') {
-            steps {
-                echo 'this is test stage'
-            }
-        }
-
-        stage('deploy') {
-            steps{
-                echo 'This is deploy stage'
-            }
-        }
+    
     }
 }
